--- a/css/moreapp.css
+++ b/css/moreapp.css
@@ -25,28 +25,19 @@ body {
     src: local('Chewy'), url(VINHAN.woff) format('woff');  
 }
 
-div.line1 {
-    height: 10px;
-    width: 100%;
-    background: #4d2d1e;
-}
-div.line2 {
-    height: 13px;
-    width: 100%;
-    background: #9c4c3e;
-}
 ul li {
     list-style: none;
 }
 li img {width: 175px; height: 175px;}
 div.phantrang img {width: 25px; height: 25px;}
 div.phantrang {text-align: center}
-img.close {position: absolute; bottom: 10px; right: 10px;}
+img.close {position: fixed; top: 10px; left: 10px;}
 
 h1 {
     font-family: Big_Bottom;
     color: #4E2E1F;
     font-size: 22px;
+    text-align: center;
 }
 h1 span {
     color: #53B9F0;
